[CAL][13] - implement NextSeqNum and GetSourceChainConfig

--- a/.mockery.yaml
+++ b/.mockery.yaml
@@ -38,6 +38,7 @@ packages:
             EstimateProvider:
             AddressCodec:
             CommitPluginCodec:
+            ChainAccessor:
     github.com/smartcontractkit/chainlink-common/pkg/types:
             interfaces:
                 ContractWriter:
