--- a/.github/workflows/solana-loopp-test.yml
+++ b/.github/workflows/solana-loopp-test.yml
@@ -42,8 +42,8 @@ jobs:
       fail-fast: false
       matrix:
         type:
-          - cmd: cd integration-tests/smoke/ccip && go test -run "^Test_CCIPMessaging_EVM2EVM$" ccip_messaging_test.go -timeout 12m -test.parallel=2 -count=1 -json
-            name: "LOOPP Messaging Test Test_CCIPMessaging_EVM2EVM"
+          - cmd: cd integration-tests/smoke/ccip && go test -run "^Test_CCIPMessaging_EVM2EVM_DockerOnly$" ccip_messaging_test.go -timeout 12m -test.parallel=2 -count=1 -json
+            name: "LOOPP Messaging Test Test_CCIPMessaging_EVM2EVM_DockerOnly"
     
     name: Integration Tests (${{ matrix.type.name }})
     runs-on: ubuntu-latest
@@ -184,6 +184,7 @@ jobs:
         env:
           CL_DATABASE_URL: ${{ env.DB_URL }}
           CL_EVM_CMD: chainlink-evm
+          CCIP_V16_TEST_ENV: docker
 
       # Upload logs (always run, even if tests fail) so they can be downloaded from the Actions UI
       - name: Upload CCIP logs
