--- a/chains/solana/contracts/Anchor.toml
+++ b/chains/solana/contracts/Anchor.toml
@@ -19,6 +19,7 @@ mcm = "5vNJx78mz7KVMjhuipyr9jKBKcMrKYGdjGkgE4LUmjKk"
 rmn_remote = "RmnXLft1mSEwDgMKu2okYuHkiazxntFFcZFrrcXxYg7"
 test_ccip_invalid_receiver = "FmyF3oW69MSAhyPSiZ69C4RKBdCPv5vAFTScisV7Me2j"
 test_ccip_receiver = "EvhgrPhTDt4LcSPS2kfJgH6T6XWZ6wT3X9ncDGLT1vui"
+test_event_emitter = "EGfB7iiotGoDVpQvByFD8AD11BhTpc9WMCyUL5q64smj"
 test_token_pool = "JuCcZ4smxAYv9QHJ36jshA7pA3FuQ3vQeWLUeAtZduJ"
 timelock = "DoajfR5tK24xVw51fWcawUZWhAXD8yrBJVacc13neVQA"
 ping_pong_demo = "PPbZmYFf5SPAM9Jhm9mNmYoCwT7icPYVKAfJoMCQovU"
