Print clippy version on CI

--- a/.github/workflows/solana.yml
+++ b/.github/workflows/solana.yml
@@ -121,6 +121,7 @@ jobs:
           cd /solana/contracts &&\
           anchor build &&\
           cargo check &&\
+          cargo clippy -- --version &&\
           cargo clippy -- -D warnings &&\
           cargo test --workspace"
 
