First bunch of lint fixes

--- a/chains/solana/contracts/programs/ccip-offramp/Cargo.toml
+++ b/chains/solana/contracts/programs/ccip-offramp/Cargo.toml
@@ -30,3 +30,7 @@ hex = "0.4.3"
 
 [build-dependencies]
 build_commit = { path = "../../crates/build-commit" }
+
+[lints.rust.unexpected_cfgs]
+level = "warn"
+check-cfg = ['cfg(target_os, values("solana"))', 'cfg(feature, values("anchor-debug", "custom-panic"))']
