--- a/chains/solana/contracts/programs/cctp-token-pool/Cargo.toml
+++ b/chains/solana/contracts/programs/cctp-token-pool/Cargo.toml
@@ -24,3 +24,7 @@ solana-program = "1.17.25"
 
 [build-dependencies]
 build_commit = { path = "../../crates/build-commit" }
+
+[lints.rust.unexpected_cfgs]
+level = "warn"
+check-cfg = ['cfg(target_os, values("solana"))', 'cfg(feature, values("anchor-debug", "custom-panic"))']
