--- a/chains/solana/contracts/programs/access-controller/Cargo.toml
+++ b/chains/solana/contracts/programs/access-controller/Cargo.toml
@@ -19,3 +19,7 @@ anchor-lang = "0.29.0"
 bytemuck = { version = "1.4.0", features = ["derive", "min_const_generics"]}
 static_assertions = "1.1.0"
 arrayvec = { version = "1.0.0", path = "../../crates/arrayvec" }
+
+[lints.rust.unexpected_cfgs]
+level = "warn"
+check-cfg = ['cfg(target_os, values("solana"))', 'cfg(feature, values("anchor-debug", "custom-panic"))']
