--- a/chains/solana/contracts/programs/base-token-pool/Cargo.toml
+++ b/chains/solana/contracts/programs/base-token-pool/Cargo.toml
@@ -21,3 +21,7 @@ anchor-spl = "0.29.0"
 solana-program = "1.17.25" # pin solana to 1.17
 spl-math = { version = "0.2.0", features = [ "no-entrypoint" ] }
 rmn_remote = {path = "../rmn-remote", features = ["cpi"]}
+
+[lints.rust.unexpected_cfgs]
+level = "warn"
+check-cfg = ['cfg(target_os, values("solana"))', 'cfg(feature, values("anchor-debug", "custom-panic"))']
