--- a/chains/solana/contracts/programs/burnmint-token-pool/Cargo.toml
+++ b/chains/solana/contracts/programs/burnmint-token-pool/Cargo.toml
@@ -26,3 +26,7 @@ ccip_common = {path = "../ccip-common"}
 
 [build-dependencies]
 build_commit = { path = "../../crates/build-commit" }
+
+[lints.rust.unexpected_cfgs]
+level = "warn"
+check-cfg = ['cfg(target_os, values("solana"))', 'cfg(feature, values("anchor-debug", "custom-panic"))']
