--- a/chains/solana/contracts/programs/example-ccip-receiver/Cargo.toml
+++ b/chains/solana/contracts/programs/example-ccip-receiver/Cargo.toml
@@ -19,3 +19,7 @@ default = []
 solana-program = "1.17.25" # pin solana to 1.17
 anchor-lang = { version = "0.29.0", features = [] }
 anchor-spl = "0.29.0"
+
+[lints.rust.unexpected_cfgs]
+level = "warn"
+check-cfg = ['cfg(target_os, values("solana"))', 'cfg(feature, values("anchor-debug", "custom-panic"))']
