--- a/chains/solana/contracts/programs/example-ccip-sender/Cargo.toml
+++ b/chains/solana/contracts/programs/example-ccip-sender/Cargo.toml
@@ -23,5 +23,6 @@ anchor-spl = "0.29.0"
 ccip_router = { version = "0.1.0-dev", path = "../ccip-router", features = ["no-entrypoint"]}
 smalloc = "0.1.2"
 
-[lints.rust]
-unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }
+[lints.rust.unexpected_cfgs]
+level = "warn"
+check-cfg = ['cfg(target_os, values("solana"))', 'cfg(feature, values("anchor-debug", "custom-panic"))']
