More clippy fixes

--- a/chains/solana/contracts/programs/external-program-cpi-stub/Cargo.toml
+++ b/chains/solana/contracts/programs/external-program-cpi-stub/Cargo.toml
@@ -17,3 +17,7 @@ default = []
 
 [dependencies]
 anchor-lang = "0.29.0"
+
+[lints.rust.unexpected_cfgs]
+level = "warn"
+check-cfg = ['cfg(target_os, values("solana"))', 'cfg(feature, values("anchor-debug", "custom-panic", "custom-heap"))']
