--- a/chains/solana/contracts/programs/access-controller/Cargo.toml
+++ b/chains/solana/contracts/programs/access-controller/Cargo.toml
@@ -22,4 +22,4 @@ arrayvec = { version = "1.0.0", path = "../../crates/arrayvec" }
 
 [lints.rust.unexpected_cfgs]
 level = "warn"
-check-cfg = ['cfg(target_os, values("solana"))', 'cfg(feature, values("anchor-debug", "custom-panic"))']
+check-cfg = ['cfg(target_os, values("solana"))', 'cfg(feature, values("anchor-debug", "custom-panic", "no-log-ix-name"))']
