--- a/chains/solana/contracts/programs/ccip-offramp/Cargo.toml
+++ b/chains/solana/contracts/programs/ccip-offramp/Cargo.toml
@@ -33,4 +33,4 @@ build_commit = { path = "../../crates/build-commit" }
 
 [lints.rust.unexpected_cfgs]
 level = "warn"
-check-cfg = ['cfg(target_os, values("solana"))', 'cfg(feature, values("anchor-debug", "custom-panic"))']
+check-cfg = ['cfg(target_os, values("solana"))', 'cfg(feature, values("anchor-debug", "custom-panic", "custom-heap"))']
