--- a/chains/solana/contracts/programs/mcm/Cargo.toml
+++ b/chains/solana/contracts/programs/mcm/Cargo.toml
@@ -23,4 +23,4 @@ hex = "0.4.3"
 
 [lints.rust.unexpected_cfgs]
 level = "warn"
-check-cfg = ['cfg(target_os, values("solana"))', 'cfg(feature, values("anchor-debug", "custom-panic"))']
+check-cfg = ['cfg(target_os, values("solana"))', 'cfg(feature, values("anchor-debug", "custom-panic", "custom-heap"))']
