--- a/chains/solana/contracts/programs/test-ccip-receiver/Cargo.toml
+++ b/chains/solana/contracts/programs/test-ccip-receiver/Cargo.toml
@@ -23,4 +23,4 @@ example_ccip_receiver = { version = "0.1.0-dev", path = "../example-ccip-receive
 
 [lints.rust.unexpected_cfgs]
 level = "warn"
-check-cfg = ['cfg(target_os, values("solana"))', 'cfg(feature, values("anchor-debug", "custom-panic"))']
+check-cfg = ['cfg(target_os, values("solana"))', 'cfg(feature, values("anchor-debug", "custom-panic", "custom-heap"))']
