--- a/chains/solana/contracts/programs/test-token-pool/Cargo.toml
+++ b/chains/solana/contracts/programs/test-token-pool/Cargo.toml
@@ -28,4 +28,4 @@ ccip_common = {path = "../ccip-common"}
 
 [lints.rust.unexpected_cfgs]
 level = "warn"
-check-cfg = ['cfg(target_os, values("solana"))', 'cfg(feature, values("anchor-debug", "custom-panic"))']
+check-cfg = ['cfg(target_os, values("solana"))', 'cfg(feature, values("anchor-debug", "custom-panic", "custom-heap"))']
