--- a/chains/solana/contracts/programs/mcm/Cargo.toml
+++ b/chains/solana/contracts/programs/mcm/Cargo.toml
@@ -20,3 +20,7 @@ anchor-lang = "0.29.0"
 
 [dev-dependencies]
 hex = "0.4.3"
+
+[lints.rust.unexpected_cfgs]
+level = "warn"
+check-cfg = ['cfg(target_os, values("solana"))', 'cfg(feature, values("anchor-debug", "custom-panic", "custom-heap"))']
