--- a/chains/solana/contracts/programs/lockrelease-token-pool/Cargo.toml
+++ b/chains/solana/contracts/programs/lockrelease-token-pool/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "lockrelease-token-pool"
-version = "0.1.1-dev"
+version = "0.1.1"
 description = "Created with Anchor"
 edition = "2021"
 
@@ -20,7 +20,7 @@ anchor-lang = { version = "0.29.0", features = ["init-if-needed"] }
 anchor-spl = "0.29.0"
 solana-program = "1.17.25" # pin solana to 1.17
 spl-math = { version = "0.2.0", features = [ "no-entrypoint" ] }
-base-token-pool = { version = "0.1.1-dev", path = "../base-token-pool/", features = ["no-entrypoint"] }
+base-token-pool = { version = "0.1.1", path = "../base-token-pool/", features = ["no-entrypoint"] }
 rmn_remote = {path = "../rmn-remote", features = ["cpi"]}
 ccip_common = {path = "../ccip-common"}
 
