--- a/chains/solana/contracts/programs/example-ccip-receiver/Cargo.toml
+++ b/chains/solana/contracts/programs/example-ccip-receiver/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "example_ccip_receiver"
-version = "0.1.1-dev"
+version = "0.1.1"
 description = "Created with Anchor"
 edition = "2021"
 
