--- a/chains/solana/contracts/programs/mcm/Cargo.toml
+++ b/chains/solana/contracts/programs/mcm/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "mcm"
-version = "0.1.1-dev"
+version = "0.1.1"
 description = "SVM implementation of ManyChainMultiSig"
 edition = "2021"
 
