--- a/chains/solana/contracts/programs/ping-pong-demo/Cargo.toml
+++ b/chains/solana/contracts/programs/ping-pong-demo/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "ping_pong_demo"
-version = "0.1.1-dev"
+version = "0.1.1"
 description = "Created with Anchor"
 edition = "2021"
 
