--- a/chains/solana/contracts/programs/test-ccip-receiver/Cargo.toml
+++ b/chains/solana/contracts/programs/test-ccip-receiver/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "test_ccip_receiver"
-version = "0.1.1-dev"
+version = "0.1.1"
 description = "Created with Anchor"
 edition = "2021"
 
@@ -19,7 +19,7 @@ default = []
 solana-program = "1.17.25" # pin solana to 1.17
 anchor-lang = { version = "0.29.0", features = [] }
 anchor-spl = "0.29.0"
-example_ccip_receiver = { version = "0.1.1-dev", path = "../example-ccip-receiver", features = ["no-entrypoint"] }
+example_ccip_receiver = { version = "0.1.1", path = "../example-ccip-receiver", features = ["no-entrypoint"] }
 
 [lints.rust.unexpected_cfgs]
 level = "warn"
