--- a/devenv/ccipv1_7/env.toml
+++ b/devenv/ccipv1_7/env.toml
@@ -62,8 +62,16 @@
   image = "804282218731.dkr.ecr.us-west-2.amazonaws.com/job-distributor:0.12.7"
 
 [fake_server]
+  # go to fakes dir, build your mocks and put your image here
   image = "f4hrenh9it/df-fakes:latest"
   port = 9111
+
+# this is an example config of a new ccip service that can be integrated, see "services/indexer.go" and read README in that dir
+[indexer]
+  image = "f4hrenh9it/df-fakes:latest"
+  port = 8332
+  [indexer.db]
+    image = "postgres:16-alpine"
 
 [[nodesets]]
   name = "don"
