change config in CI

--- a/.github/workflows/ccipv17-e2e-evm-testnet.yaml
+++ b/.github/workflows/ccipv17-e2e-evm-testnet.yaml
@@ -46,7 +46,7 @@ jobs:
               exit 1
               ;;
           esac
-          PRIVATE_KEY=${PRIVATE_KEY} go run cmd/ccip.go -c env.toml,env-fuji.toml u
+          PRIVATE_KEY=${PRIVATE_KEY} go run cmd/ccip.go -c env-ci.toml,env-fuji.toml u
 
 defaults:
   run:
