--- a/.github/workflows/ccipv17-soak-anvil.yaml
+++ b/.github/workflows/ccipv17-soak-anvil.yaml
@@ -35,7 +35,7 @@ jobs:
       - name: Run Observability Stack
         run: go run cmd/ccip.go obs u
       - name: Run CCIPv2 environment
-        run: go run cmd/ccip.go -c env.toml u
+        run: go run cmd/ccip.go -c env-ci.toml u
       - name: Run Soak Test
         working-directory: example/ccipv1_7/tests
         run: go test -timeout 2h -v -run TestSoak
