--- a/devenv/ccipv1_7/env.toml
+++ b/devenv/ccipv1_7/env.toml
@@ -71,6 +71,7 @@
 [indexer]
   image = "indexer:dev"
   port = 8100
+  # path is relative from "devenv" dir
   source_code_path = "ccipv1_7/indexer"
   [indexer.db]
     image = "postgres:16-alpine"
