--- a/.github/workflows/ccip-ocr3-build-lint-test.yml
+++ b/.github/workflows/ccip-ocr3-build-lint-test.yml
@@ -34,8 +34,6 @@ jobs:
           make install-linters
       - name: Run linter
         run: make lint
-      - name: Run lint-custom
-        run: make lint-custom
       - name: Run protobuf linter
         run: |
           make install_buf
@@ -93,3 +91,26 @@ jobs:
               repo: context.repo.repo,
               body: `| Metric | \`${{ github.head_ref }}\` | \`${{ github.base_ref }}\` |\n|--|--|--|\n| **Coverage** | ${coverage} | ${coverage_target} |`
             });
+  custom-linters:
+    name: Custom linters (Go 1.23.x)
+    runs-on: ubuntu-latest
+    needs: build-lint-test
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+
+      - name: Setup Go 1.23.x
+        uses: actions/setup-go@v5
+        with:
+          go-version: '1.23.x'
+
+      - name: Display Go version
+        run: go version
+
+      - name: Install custom linters (safebigint, goboundcheck)
+        run: make install-custom-linters
+
+      - name: Run custom linters in compat mode
+        run: make lint-custom
