--- a/devenv/ccipv1_7/env.toml
+++ b/devenv/ccipv1_7/env.toml
@@ -63,7 +63,7 @@
 
 [fake_server]
   # go to fakes dir, build your mocks and put your image here
-  image = "f4hrenh9it/df-fakes:latest"
+  image = "ccip-fakes:latest"
   port = 9111
 
 # this is an example config of a new ccip service that can be integrated, see "services/indexer.go" and read README in that dir
