--- a/.github/workflows/ccipv17-e2e-evm-testnet.yaml
+++ b/.github/workflows/ccipv17-e2e-evm-testnet.yaml
@@ -46,7 +46,9 @@ jobs:
               exit 1
               ;;
           esac
-          PRIVATE_KEY=${PRIVATE_KEY} go run cmd/ccip.go -c env-ci.toml,env-fuji.toml u
+          cd cmd/ccip && go install . && cd -
+          PRIVATE_KEY=${PRIVATE_KEY} ccip env-ci.toml,env-fuji.toml
+
 
 defaults:
   run:
