--- a/devenv/ccipv1_7/env.toml
+++ b/devenv/ccipv1_7/env.toml
@@ -7,8 +7,6 @@
   cl_nodes_funding_link = 50
   # amount of time we'll wait for the first feed answer, if there is no answer environment is not working
   verification_timeout = 400
-  # contracts configuration timeout (seconds)
-  contracts_configuration_timeout = 60
   # target blockchain finality depth
   chain_finality_depth = 5
   # whether to verify product deployment or not
@@ -68,12 +66,33 @@
 
 # this is an example config of a new ccip service that can be integrated, see "services/indexer.go" and read README in that dir
 # since the prodct is in early stages we run dev images by default, with hot-reload
-[indexer]
-  image = "indexer:dev"
+[verifier]
+  image = "verifier:dev"
   port = 8100
   # path is relative from "devenv" dir
-  source_code_path = "ccipv1_7/indexer"
+  source_code_path = "../services/verifier"
+  [verifier.db]
+    image = "postgres:16-alpine"
+
+[executor]
+  image = "executor:dev"
+  port = 8101
+  source_code_path = "../services/executor"
+  [executor.db]
+    image = "postgres:16-alpine"
+
+[indexer]
+  image = "indexer:dev"
+  port = 8102
+  source_code_path = "../services/indexer"
   [indexer.db]
+    image = "postgres:16-alpine"
+
+[aggregator]
+  image = "aggregator:dev"
+  port = 8103
+  source_code_path = "../services/aggregator"
+  [aggregator.db]
     image = "postgres:16-alpine"
 
 [[nodesets]]
