print CLDF contracts by default, add print cmd and turn off CI (no ECRs)

--- a/.github/workflows/ccipv17-e2e.yaml
+++ b/.github/workflows/ccipv17-e2e.yaml
@@ -1,7 +1,8 @@
 name: End-to-end CCIPv1.7 Test
 
 on:
-  push:
+  # TODO: we need all the ECRs to be available before we turn it on
+  workflow_dispatch:
 
 jobs:
   e2e:
