--- a/.github/workflows/v2-aggregator.yaml
+++ b/.github/workflows/v2-aggregator.yaml
@@ -12,6 +12,9 @@ defaults:
   run:
     working-directory: v2/aggregator
 
+permissions:
+  contents: read
+
 jobs:
   lint-and-test:
     runs-on: ubuntu-latest
