--- a/.github/workflows/test-evm-deployments.yml
+++ b/.github/workflows/test-evm-deployments.yml
@@ -8,6 +8,9 @@ on:
   push:
     branches:
       - 'main'
+    paths:
+      - ./chains/evm/gobindings/generated/**
+      - ./chains/evm/deployment/**
 
 jobs:
   test-evm-deployments:
