--- a/chains/evm/package.json
+++ b/chains/evm/package.json
@@ -22,6 +22,20 @@
     "contracts/test/mocks/**/*",
     "!contracts/test/mocks/test/*",
     "contracts/test/helpers/**/*",
+    "!contracts/poolsV2/**/*",
+    "!contracts/ccvs/**/*",
+    "!contracts/onRamp/CCVProxy.sol",
+    "!contracts/onRamp/ExecutorOnRamp.sol",
+    "!contracts/offRamp/CCVAggregator.sol",
+    "!contracts/applications/CCIPClientExampleWithCCVs.sol",
+    "!contracts/interfaces/IAny2EVMMessageReceiverV2.sol",
+    "!contracts/interfaces/IFeeQuoterV2.sol",
+    "!contracts/interfaces/IPoolV2.sol",
+    "!contracts/interfaces/IExecutorOnRamp.sol",
+    "!contracts/interfaces/ICrossChainVerifierV1.sol",
+    "!contracts/libraries/MessageV1Codec.sol",
+    "!contracts/libraries/CCVConfigValidation.sol",
+    "!contracts/FeeQuoterV2.sol",
     "scripts/compile_all",
     "abi/*.abi.json",
     "remappings.txt",
