--- a/chains/evm/package.json
+++ b/chains/evm/package.json
@@ -49,7 +49,7 @@
     "pnpm": ">=10"
   },
   "dependencies": {
-    "@chainlink/contracts": "1.5.0-beta.1",
+    "@chainlink/contracts": "1.5.0",
     "@changesets/cli": "^2.29.5",
     "@changesets/get-github-info": "^0.6.0",
     "@openzeppelin/contracts-4.8.3/": "npm:@openzeppelin/contracts@4.8.3",
