exclude 1.7 test contracts from package.json

--- a/chains/evm/package.json
+++ b/chains/evm/package.json
@@ -22,6 +22,16 @@
     "contracts/test/mocks/**/*",
     "!contracts/test/mocks/test/*",
     "contracts/test/helpers/**/*",
+    "!contracts/test/mocks/MockVerifier.sol",
+    "!contracts/test/mocks/MockReceiverV2.sol",
+    "!contracts/test/mocks/MockExecutor.sol",
+    "!contracts/test/helpers/BaseVerifierTestHelper.sol",
+    "!contracts/test/helpers/CCVAggregatorHelper.sol",
+    "!contracts/test/helpers/CCVProxyTestHelper.sol",
+    "!contracts/test/helpers/FeeQuoterHelper.sol",
+    "!contracts/test/helpers/ReentrantCCV.sol",
+    "!contracts/test/helpers/SignatureQuorumValidatorHelper.sol",
+    "!contracts/test/helpers/TokenPoolV2Helper.sol",
     "!contracts/poolsV2/**/*",
     "!contracts/ccvs/**/*",
     "!contracts/onRamp/CCVProxy.sol",
