--- a/.github/workflows/test-deployments.yml
+++ b/.github/workflows/test-deployments.yml
@@ -51,6 +51,7 @@ jobs:
       run:
         working-directory: chains/evm/deployment
     steps:
+      - uses: actions/checkout@v4
       - name: Run tests
         run: go test ./...
 
@@ -62,5 +63,6 @@ jobs:
       run:
         working-directory: deployment
     steps:
+      - uses: actions/checkout@v4
       - name: Run tests
         run: go test ./...
