--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -9,3 +9,5 @@
 /chains/solana @smartcontractkit/ccip-onchain-solana
 .github/workflows/solana.yml @smartcontractkit/ccip-onchain-solana
 
+# Deployment tooling
+/deployment @smartcontractkit/ccip-tooling
